fix show page mistake

--- a/app/views/groups/show.html.erb
+++ b/app/views/groups/show.html.erb
@@ -25,9 +25,9 @@
        <table class="table">
          <thead>
            <tr>
-             <th></th>
-             <th></th>
-             <th></th>
+             <th>文章内容</th>
+             <th>Creator</th>
+             <th>Create Time</th>
            </tr>
          </thead>
          <tbody>
